[gd_scene load_steps=35 format=3 uid="uid://d1k55f81hhw1c"]

[ext_resource type="Script" path="res://Entities/Enemy/EnemyCharacterBody.gd" id="1_go7an"]
[ext_resource type="Shader" path="res://Entities/Player/hover.gdshader" id="2_todol"]
[ext_resource type="Texture2D" uid="uid://dfrbq758ji7i" path="res://Sprites/Characters/EnemySmall2.png" id="3_opfre"]
[ext_resource type="Script" path="res://Entities/Enemy/EnemySprite.gd" id="4_an7wg"]
[ext_resource type="Script" path="res://Entities/Attack.gd" id="5_gl43y"]
[ext_resource type="Texture2D" uid="uid://chujxb4e6pk0g" path="res://Sprites/Animations/AttackAnim1.png" id="6_4bhjr"]
[ext_resource type="Texture2D" uid="uid://bp11a7a475jro" path="res://Sprites/Animations/AttackAnim2.png" id="7_mlvag"]
[ext_resource type="Texture2D" uid="uid://b4labx8lkuv6l" path="res://Sprites/Animations/AttackAnim3 2.png" id="8_uexsu"]
[ext_resource type="Texture2D" uid="uid://b5o78h5iial6g" path="res://Sprites/Animations/AttackAnim4.png" id="9_dv83g"]
[ext_resource type="Texture2D" uid="uid://4qspmbnqkk0g" path="res://Sprites/Animations/AttackAnim5.png" id="10_jwgm2"]
[ext_resource type="Texture2D" uid="uid://dyyawlyfqicph" path="res://Sprites/Animations/AttackAnim6.png" id="11_nb4p0"]
[ext_resource type="Texture2D" uid="uid://db5ftdh1diapq" path="res://Sprites/Animations/AttackSpikeAnim-1.png" id="12_dveo0"]
[ext_resource type="Texture2D" uid="uid://fx34knry35ji" path="res://Sprites/Animations/AttackSpikeAnim-2.png" id="13_vhia3"]
[ext_resource type="Texture2D" uid="uid://t46ucktc8r24" path="res://Sprites/Animations/AttackSpikeAnim-3.png" id="14_rke03"]
[ext_resource type="Texture2D" uid="uid://conqyupcapmvr" path="res://Sprites/Animations/AttackSpikeAnim-4.png" id="15_gpq8i"]
[ext_resource type="Texture2D" uid="uid://ckoyppydf0d61" path="res://Sprites/Animations/AttackSpikeAnim-5.png" id="16_gcp3m"]
[ext_resource type="Texture2D" uid="uid://cbn5uafmb02c3" path="res://Sprites/Animations/AttackSpikeAnim-6.png" id="17_3sdkd"]
[ext_resource type="Texture2D" uid="uid://ccfpgn7wjm4r8" path="res://Sprites/Animations/AttackSpikeAnim-7.png" id="18_f0n55"]
[ext_resource type="Texture2D" uid="uid://cpfcasbveh2f3" path="res://Sprites/Animations/AttackSpikeAnim-8.png" id="19_dkhps"]
[ext_resource type="Texture2D" uid="uid://bxslj0kd4kixd" path="res://Sprites/Animations/AttackSpikeAnim-9.png" id="20_db4d2"]
[ext_resource type="Texture2D" uid="uid://onps1uun7k2m" path="res://Sprites/Animations/AttackSpikeAnim-10.png" id="21_g18ql"]
[ext_resource type="Texture2D" uid="uid://b5bq35yt13ayy" path="res://Sprites/Animations/AttackSpikeAnim-11.png" id="22_kfjff"]
[ext_resource type="PackedScene" uid="uid://hg7e4ve8vfed" path="res://Entities/health_bar.tscn" id="23_jeuvx"]
[ext_resource type="Texture2D" uid="uid://cxe2gxrraghxn" path="res://Sprites/Animations/OnBeatPingAnim1.png" id="24_mmrv0"]
[ext_resource type="Texture2D" uid="uid://yowqn22xipkv" path="res://Sprites/Animations/OnBeatPingAnim2.png" id="25_fime2"]
[ext_resource type="Texture2D" uid="uid://bcvefb6k2im2r" path="res://Sprites/Animations/OnBeatPingAnim3.png" id="26_nmbx8"]
[ext_resource type="Texture2D" uid="uid://dxpolj2bhdjl3" path="res://Sprites/Animations/OnBeatPingAnim4.png" id="27_b2rwd"]
[ext_resource type="Texture2D" uid="uid://dibusnnrtsag7" path="res://Sprites/Animations/OnBeatPingAnim5.png" id="28_8sqrj"]
[ext_resource type="Texture2D" uid="uid://brtassgl2hj48" path="res://Sprites/Animations/OnBeatPingAnim6.png" id="29_u11nq"]
[ext_resource type="AudioStream" uid="uid://d2vvf44p47efx" path="res://SFX/SFX_laserspike.mp3" id="30_y14b0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wkqwu"]
shader = ExtResource("2_todol")
shader_parameter/amplitude = 7.727
shader_parameter/flash_mix = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_j4upl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_4bhjr")
}, {
"duration": 1.0,
"texture": ExtResource("7_mlvag")
}, {
"duration": 1.0,
"texture": ExtResource("8_uexsu")
}, {
"duration": 1.0,
"texture": ExtResource("9_dv83g")
}, {
"duration": 1.0,
"texture": ExtResource("10_jwgm2")
}, {
"duration": 1.0,
"texture": ExtResource("11_nb4p0")
}],
"loop": true,
"name": &"AttackAnimation",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_dveo0")
}, {
"duration": 1.0,
"texture": ExtResource("13_vhia3")
}, {
"duration": 1.0,
"texture": ExtResource("14_rke03")
}, {
"duration": 1.0,
"texture": ExtResource("15_gpq8i")
}, {
"duration": 1.0,
"texture": ExtResource("16_gcp3m")
}, {
"duration": 1.0,
"texture": ExtResource("17_3sdkd")
}, {
"duration": 1.0,
"texture": ExtResource("18_f0n55")
}, {
"duration": 1.0,
"texture": ExtResource("19_dkhps")
}, {
"duration": 1.0,
"texture": ExtResource("20_db4d2")
}, {
"duration": 1.0,
"texture": ExtResource("21_g18ql")
}, {
"duration": 1.0,
"texture": ExtResource("22_kfjff")
}],
"loop": true,
"name": &"AttackSpike",
"speed": 18.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_xh55y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("24_mmrv0")
}, {
"duration": 1.0,
"texture": ExtResource("25_fime2")
}, {
"duration": 1.0,
"texture": ExtResource("26_nmbx8")
}, {
"duration": 1.0,
"texture": ExtResource("27_b2rwd")
}, {
"duration": 1.0,
"texture": ExtResource("28_8sqrj")
}, {
"duration": 1.0,
"texture": ExtResource("29_u11nq")
}],
"loop": true,
"name": &"default",
"speed": 18.0
}]

[sub_resource type="GDScript" id="GDScript_jw3hv"]
script/source = "extends AnimatedSprite2D

func _on_animation_looped():
	stop()

func _on_health_pool_health_changed(_amount):
	play()
"

[node name="Enemy" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_go7an")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(1, -48, 16, -23, 17, 4, -4, 42, -10, 32, -13, -25, -10, -39)

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_wkqwu")
texture = ExtResource("3_opfre")
script = ExtResource("4_an7wg")

[node name="Attack" type="CharacterBody2D" parent="."]
position = Vector2(0, -21)
script = ExtResource("5_gl43y")

[node name="Animation" type="AnimatedSprite2D" parent="Attack"]
visible = false
rotation = 3.14159
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_j4upl")
animation = &"AttackSpike"
offset = Vector2(-40, 2)
flip_h = true

[node name="Area2D" type="Area2D" parent="Attack"]
rotation = 1.5708

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Attack/Area2D"]
position = Vector2(88, -7.27596e-12)
polygon = PackedVector2Array(-98.0005, -131, -79.0005, -131, -79, 5.99997, -98, 6.00004)

[node name="Sound" type="AudioStreamPlayer2D" parent="Attack"]
position = Vector2(0, 21)
stream = ExtResource("30_y14b0")

[node name="HealthPool" parent="." instance=ExtResource("23_jeuvx")]
position = Vector2(0, -62)

[node name="HurtAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_xh55y")
script = SubResource("GDScript_jw3hv")

[connection signal="attack_hit" from="Attack" to="." method="_on_attack_attack_hit"]
[connection signal="animation_looped" from="Attack/Animation" to="Attack" method="_on_animation_animation_looped"]
[connection signal="die" from="HealthPool" to="." method="_on_health_pool_die"]
[connection signal="health_changed" from="HealthPool" to="HurtAnimation" method="_on_health_pool_health_changed"]
[connection signal="animation_looped" from="HurtAnimation" to="HurtAnimation" method="_on_animation_looped"]
